Refactor UI: Modern glassmorphism design, auto-scroll AI chat, and fix data persistence

--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,17 @@ DerivedData/
 app_debug.log
 
 # Agent/tool directories
+.agent/
 .sisyphus/
 .claude/
 .gemini/
 .swiftpm/
+.codex/
+.cursor/
+.kiro/
+.opencode/
+.trae/
+.windsurf/
 
 # Testing docs
 TESTING_GUIDE.md
